--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8" />
-    <title>Making your first Phaser 3 Game - Part 1</title>
+    <title>Força Elástica</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
     <style type="text/css">
         body {
